agregados modelos de SIPED

--- a/foros/templates/base.html
+++ b/foros/templates/base.html
@@ -6,6 +6,9 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <script src="https://unpkg.com/htmx.org@1.9.12"
+            xintegrity="sha384-HblEGrSJCOGj/P1z4cOQjklsFh/N3hA/Hg/5Y/M/P0P+UIaRw+KyCV8FpL/T-sbj"
+            crossorigin="anonymous"></script>
     <title>
       {% block title %}
         forOS
