--- a/foros/templates/pages/home.html
+++ b/foros/templates/pages/home.html
@@ -1,1 +1,16 @@
 {% extends "base.html" %}
+
+{% block content %}
+  <div class="px-4 py-5 my-5 text-center">
+    <h1 class="display-5 fw-bold">forOS</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">Sistema de Gestión Legal Open Source</p>
+      <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
+        <a href="{% url 'clientes:list' %}"
+           class="btn btn-primary btn-lg px-4 gap-3">Ver Clientes</a>
+        <a href="{% url 'casos:expediente_list' %}"
+           class="btn btn-outline-secondary btn-lg px-4">Lista de Expedientes</a>
+      </div>
+    </div>
+  </div>
+{% endblock content %}
