--- a/foros/templates/pages/home.html
+++ b/foros/templates/pages/home.html
@@ -8,6 +8,7 @@
       <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
         <a href="{% url 'clientes:list' %}"
            class="btn btn-primary btn-lg px-4 gap-3">Ver Clientes</a>
+        <a href="{% url 'casos:matriz' %}" class="btn btn-success btn-lg px-4">Matriz de Tareas</a>
         <a href="{% url 'casos:expediente_list' %}"
            class="btn btn-outline-secondary btn-lg px-4">Lista de Expedientes</a>
       </div>
